fix: harden package scanning, controller wiring and file upload paths; bump to 1.0.20260920